--- a/src/index.css
+++ b/src/index.css
@@ -1,50 +1,96 @@
 :root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-
-  color-scheme: light dark;
-  color: rgb(250, 249, 255);
-  background-color: rgb(45, 20, 127);
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  -webkit-text-size-adjust: 100%;
 }
 
-body {
+* {
   margin: 0;
-  display: flex;
-  flex-direction: column;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+  padding: 0;
 }
 
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
-}
-
-@media (prefers-color-scheme: light) {
-  :root {
-    background-color: rgb(250, 249, 255);
-    color: rgb(45, 20, 127);
-  }
-}
-
-
-
-nav{
-  background-color: rgb(17, 1, 32);
+nav {
+  background-color: rgb(156, 86, 221);
   padding: 16px 32px;
-  font-size: large;
 }
+
 nav a {
   margin-right: 16px;
   color: aliceblue;
   text-decoration: none;
 }
-nav a.active{
+nav a.active {
   font-weight: 700;
+}
+
+footer {
+  background-color: rgb(156, 86, 221);
+  padding: 16px 32px;
+  color: aliceblue;
+}
+
+/* book page */
+
+.searching {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: 2rem 0;
+}
+
+h1 {
+  margin-bottom: 1rem;
+}
+
+input {
+  padding: 0.3rem;
+  font-size: 15px;
+  font-weight: 500;
+}
+
+.displaying {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+/* book item */
+
+.book-item {
+  margin: 0.6rem;
+  padding: 1rem;
+  border: 1px black solid;
+  border-radius: 0.3rem;
+  width: 500px;
+}
+.book-title {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+}
+h3 {
+  font-size: 20px;
+  font-weight: 600;
+  color: black;
+  margin-bottom: 1px;
+}
+h4 {
+  font-size: 15px;
+  font-weight: 500;
+  font-style: italic;
+  color: rgb(68, 68, 68);
+  margin-bottom: 1px;
+}
+h5 {
+  font-size: 16px;
+  font-weight: 500;
+  color: rgb(55, 53, 53);
+}
+h5:hover {
+  color: rgb(30, 23, 23);
+  font-weight: 700;
+  cursor: pointer;
+}
+p {
+  font-size: 14px;
+  font-weight: 400;
 }
